Bug 449385 - User changes can't be saved with accountsservice-22.04.62
Summary: User changes can't be saved with accountsservice-22.04.62
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_users (other bugs)
Version First Reported In: 5.23.5
Platform: Arch Linux Linux
: VHI major
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 449395 449423 449484 449567 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-01-30 19:06 UTC by Marc
Modified: 2024-08-12 09:15 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marc 2022-01-30 19:06:06 UTC
SUMMARY
I am trying to change my avatar or email address in systemsettings --> users. For my avatar picture, I've tried a picture from my phone (.jpg) and also the standard avatars that are available. When I click apply the message "Could not get permission to save user xxx". I think this is the same message that appears, when I click cancel in the PolicyKit1 window, but the window doesn't open. When I try to change my sddm theme in systemsettings --> Startup and Shutdown --> Login Screen (SDDM) the PolicyKit1 window does show up and I can enter my password and everything just works fine.


STEPS TO REPRODUCE
1. Open systemsettings --> users
2. Select different avatar or enter an email adrees
3. Click apply

OBSERVED RESULT
Error message "Could not get permission to save user xxx".

EXPECTED RESULT
PolicyKit1 window opens, I insert my password, no error message and avatar or email are set.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  Arch Linux; Kernel: 5.16.3-arch1-1 (64bit)
(available in About System)
KDE Plasma Version: 5.23.5
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
I installed Arch freshly on this device where the bug happens so it never worked on this system (I already tried reinstalling all packages and I already reinstalled my system).
Comment 1 Marc 2022-01-30 19:53:01 UTC
I have another laptop with Arch and KDE installed (pretty much the same setup on the laptop that has the bug), but the system on this one is not freshly installed. I tried changing my avatar or email and it worked. Afterwards I updated my system (using pacman) and it doens't work anymore. So this bug seems to be in a current version of the systemsettings or it's dependencies.  (Unfortunately I didn't update this laptop very recently, because I just use it sometimes, so maybe this bug is a little bit older). I don't know how I can provide useful information for solving this problem, but I would like to help!
Comment 2 Viorel-Cătălin Răpițeanu 2022-01-30 21:03:04 UTC
I can confirm that I'm also unable to change my user settings (like email) from the users kcm.
Comment 3 Antonio Rojas 2022-01-31 12:03:49 UTC
*** Bug 449395 has been marked as a duplicate of this bug. ***
Comment 4 Antonio Rojas 2022-01-31 12:05:29 UTC
Caused by the update to accountsservice 22.04.62
Comment 6 Antonio Rojas 2022-01-31 18:59:03 UTC
*** Bug 449423 has been marked as a duplicate of this bug. ***
Comment 7 Antonio Rojas 2022-02-02 08:13:42 UTC
*** Bug 449484 has been marked as a duplicate of this bug. ***
Comment 8 Nate Graham 2022-02-02 16:57:54 UTC
Does anyone know if this is an upstream regression that's being fixed, or is the breakage expected/unrevertable and we have to adapt to it?
Comment 9 Antonio Rojas 2022-02-02 17:48:15 UTC
(In reply to Nate Graham from comment #8)
> Does anyone know if this is an upstream regression that's being fixed, or is
> the breakage expected/unrevertable and we have to adapt to it?

This seems completely intentional: 
https://gitlab.freedesktop.org/accountsservice/accountsservice/-/merge_requests/46#note_378985
Comment 10 Nate Graham 2022-02-02 18:28:27 UTC
Darn. Guess we gotta fix it.
Comment 11 John 2022-02-02 18:46:09 UTC
(In reply to Nate Graham from comment #10)
> Darn. Guess we gotta fix it.

Haha -- bro my bad i break it to often then i should be; just be happy your not as busy to fix my errors :D
Comment 12 Nicolas Fella 2022-02-03 19:39:33 UTC
*** Bug 449567 has been marked as a duplicate of this bug. ***
Comment 13 Bug Janitor Service 2022-02-03 19:59:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1433
Comment 14 Nate Graham 2022-02-03 21:57:59 UTC
Git commit efddc639b7f1443e643787e841893a5700f07742 by Nate Graham, on behalf of Jan Blackquill.
Committed on 03/02/2022 at 21:39.
Pushed by ngraham into branch 'master'.

kcms/users: set interactive auth flag

The accounts service requires this now.

M  +18   -7    kcms/users/src/user.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/efddc639b7f1443e643787e841893a5700f07742
Comment 15 Nate Graham 2022-02-03 21:58:34 UTC
Git commit 2885bcfacbf49f8292b8567f0b710efc30b7e57d by Nate Graham, on behalf of Jan Blackquill.
Committed on 03/02/2022 at 21:58.
Pushed by ngraham into branch 'Plasma/5.24'.

kcms/users: set interactive auth flag

The accounts service requires this now.


(cherry picked from commit efddc639b7f1443e643787e841893a5700f07742)

M  +18   -7    kcms/users/src/user.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/2885bcfacbf49f8292b8567f0b710efc30b7e57d
Comment 16 Canoe 2022-02-09 21:17:42 UTC
Just a quick confirmation that this issue still exists in ;

KDE Plasma Version: 5.24.0
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2
Comment 17 horen@mac.com 2022-02-10 01:37:46 UTC
I can confirm, the bug still exists in 
Plasma 5.24.0
Framework: 5.90.0
Qt Version 5.15.2

Only the error message changed: It now reports "Something went wrong during saving !"
Comment 18 Antonio Rojas 2022-02-10 06:59:46 UTC
The bug is fixed as far as KDE is concerned. What you are seeing is a different, upstream issue. 
https://gitlab.freedesktop.org/accountsservice/accountsservice/-/issues/98
Comment 19 locutusofborg 2022-02-13 15:22:42 UTC
This bug still exist. Would of thought the fix would of been released with the Plasma 5.24.0 update.
Comment 20 locutusofborg 2022-02-13 15:24:09 UTC
(In reply to horen@mac.com from comment #17)
> I can confirm, the bug still exists in 
> Plasma 5.24.0
> Framework: 5.90.0
> Qt Version 5.15.2
> 
> Only the error message changed: It now reports "Something went wrong during
> saving !"

I can also comfirm this.
Comment 21 Antonio Rojas 2022-02-13 16:18:49 UTC
Please see comment 18(In reply to locutusofborg from comment #19)
> This bug still exist. Would of thought the fix would of been released with
> the Plasma 5.24.0 update.

Please see comment 18
Comment 22 Ray 2022-02-19 23:55:02 UTC
(In reply to horen@mac.com from comment #17)
> I can confirm, the bug still exists in 
> Plasma 5.24.0
> Framework: 5.90.0
> Qt Version 5.15.2
> 
> Only the error message changed: It now reports "Something went wrong during
> saving !"

The same goes for me on Arch linux.

Plasma 5.24.1
Framework: 5.91.0
Qt Version 5.15.2
Comment 23 Antonio Rojas 2022-02-20 00:01:59 UTC
(In reply to Ray from comment #22)
> The same goes for me on Arch linux.
> 
> Plasma 5.24.1
> Framework: 5.91.0
> Qt Version 5.15.2

For the third time: please see comment 18
Comment 24 David Edmundson 2024-08-12 09:15:39 UTC
Git commit 95d495164bfaee45dde7588aae7fa467b100a4d9 by David Edmundson, on behalf of ivan tkachenko.
Committed on 12/08/2024 at 09:15.
Pushed by davidedmundson into branch 'master'.

kcms/users: Remove workaround for QTBUG-100458

The new API has been shipped in Qt 6.7.0

Effectively reverts 79113d99e44ace405bd9211e2c0f73659ff94c0f and
efddc639b7f1443e643787e841893a5700f07742
Related: bug 450122

M  +4    -11   kcms/users/src/kcm.cpp
M  +18   -25   kcms/users/src/user.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/95d495164bfaee45dde7588aae7fa467b100a4d9