kcms/users: set interactive auth flag

The accounts service requires this now.

BUG: 449385